tweak width, height

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 .board {
-  width: 80vh;
-  height: 80vh;
+  width: min(80vh, 80vw);
+  height: min(80vh, 80vw);
   min-width: 400px;
   min-height: 400px;
 }
